add advanced filter in app

--- a/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/components/card/card.component.html
@@ -79,9 +79,9 @@
 
   <div class="action-section">
       <div class="action-buttons">
-          <button class="action-btn whatsapp">
+          <!-- <button class="action-btn whatsapp">
               <i class="fab fa-whatsapp"></i>
-          </button>
+          </button> -->
           <button class="action-btn view-details" [routerLink]="['/parts',10]">
               <i class="fas fa-eye"></i>
           </button>
