--- a/Fekrah/API/ClientApp/src/app/core/features/home/categories/categories.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/categories/categories.component.scss
@@ -32,7 +32,7 @@
     gap: 12px;
     padding: 0 12px;
     scroll-behavior: smooth;
-
+    justify-content: space-around;
     &::-webkit-scrollbar {
       display: none;
     }
